--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <input type="file" id="file-selector" accept=".fit"/>
             <p></p>
             <h2>
-                <div id="status"></div>
-                <div id="heart_rate">heart rate</div>
-                <div id="power">power</div>
-                <div id="cadence">cadence</div>
+                <div id="status">COULD NOT LOAD JAVASCRIPT</div>
+                <div id="heart_rate"></div>
+                <div id="power"></div>
+                <div id="cadence"></div>
                 <p></p>
             </h2>
             <button type="button" id="stopBTN">Stop</button>
